--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,5 +82,6 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE font/Ubuntu-Medium.ttf  font/Ubuntu-Medium.ttf
 
   FILE levels/level1.txt       levels/level1.txt
+  FILE levels/level2.txt       levels/level2.txt
 )
 
