added textures to the level finish menu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,14 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE img/menu/doorStar2.png         img/menu/doorStar2.png
   FILE img/menu/doorStar3.png         img/menu/doorStar3.png
 
+  FILE img/menu/lf-levelComplete.png      img/menu/lf-levelComplete.png
+  FILE img/menu/lf-nextLevel.png          img/menu/lf-nextLevel.png
+  FILE img/menu/lf-nextLevelSelected.png  img/menu/lf-nextLevelSelected.png
+  FILE img/menu/lf-restart.png            img/menu/lf-restart.png
+  FILE img/menu/lf-restartSelected.png    img/menu/lf-restartSelected.png
+  FILE img/menu/lf-menu.png               img/menu/lf-menu.png
+  FILE img/menu/lf-menuSelected.png       img/menu/lf-menuSelected.png
+
   # Levels
   # Figure out how to load all levels from file automatically
   FILE levels/level001.txt       levels/level001.txt
