--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,6 +99,7 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE img/level/floorBlank.png       img/level/floorBlank.png
   FILE img/level/floorPainted.png     img/level/floorPainted.png
   FILE img/level/ball.png             img/level/ball.png
+  FILE img/level/wallFill.png             img/level/wallFill.png
 
   FILE img/common/background1.png  img/common/background1.png
   FILE img/common/background2.png  img/common/background2.png
