--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -123,6 +123,9 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE img/menu/levelSelect/doorLocked.png        img/menu/levelSelect/doorLocked.png
   FILE img/menu/levelSelect/doorLockedOutline.png img/menu/levelSelect/doorLockedOutline.png
   FILE img/menu/levelSelect/doorPlatform.png      img/menu/levelSelect/doorPlatform.png
+  FILE img/menu/levelSelect/headerWorld.png       img/menu/levelSelect/headerWorld.png
+  FILE img/menu/levelSelect/header1.png           img/menu/levelSelect/header1.png
+  FILE img/menu/levelSelect/header2.png           img/menu/levelSelect/header2.png
 
   FILE img/menu/levelFinish/lf-levelComplete.png      img/menu/levelFinish/lf-levelComplete.png
   FILE img/menu/levelFinish/lf-nextLevel.png          img/menu/levelFinish/lf-nextLevel.png
