--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,5 +228,7 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE levels/World2/level024.txt       levels/World2/level024.txt
   FILE levels/World2/level025.txt       levels/World2/level025.txt
   FILE levels/World2/level026.txt       levels/World2/level026.txt
+  FILE levels/World2/level027.txt       levels/World2/level027.txt
+  FILE levels/World2/level028.txt       levels/World2/level028.txt
 )
 
