--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,6 +114,7 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   FILE img/common/background1.png  img/common/background1.png
   FILE img/common/background2.png  img/common/background2.png
   FILE img/common/background3.png  img/common/background3.png
+  FILE img/common/background4.png  img/common/background4.png
   FILE img/common/star.png         img/common/star.png
   FILE img/common/messageBox.png   img/common/messageBox.png
   FILE img/common/back.png         img/common/back.png
